[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"
authors = [ "{{authors}}" ]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version="0.2.0", features=['http'] }
worker-macros = { version="0.2.0", features=['http'] }
console_error_panic_hook = { version = "0.1.1" }
http = "1.1"
# Useful dependencies
cfg-if = "0.1.2"
# Telegram dependencies
serde_json = "1.0.120"
telbot-types = { git = "https://github.com/romeg/telbot.git", branch = "main" }